syntax = "proto3";

package product;

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);

}

message CreateProductRequest {

}

message CreateProductResponse {

}